--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -1,28 +1,43 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: black;
+  /* height: 100px; */
   padding: 20px;
   color: white;
+  font-size: calc(20px + 2vmin);
+  /* text-align: center; */
+  text-shadow: 3px 2px red;
 }
 
 .App-title {
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
+.cardImg {
+width: 35px;
+height: 80px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.beerdetailimg {
+  width: 30%;
+height: 80%;
+
+}
+
+.card{
+  padding: 20px;
+}
+
+.navi {
+  list-style: none;
+  padding: 10px 10px;
+}
+
+.menuImg {
+  width: 100%;
+  padding: 15px 15px ;
+}
+
+.form{
+  padding: 20px;
 }
